@@ -1,11 +1,11 @@
 ::[Bat To Exe Converter]
 ::
 ::YAwzoRdxOk+EWAjk
-::fBw5plQjdCyDJGyX8VAjFBBdXwyNAE+1EbsQ5+n//NaEo1kiWfcydZbk0rWCLO8E70DqSsR/hisP1sIPA3s=
+::fBw5plQjdCuDJEmW+0g1Kw9HcA2GOWqGBLQf4/3r7OuT9kchR/A8RILa07qyMuUA5VD2dpM+6ntKiIYFDxRWMBuoYW8=
 ::YAwzuBVtJxjWCl3EqQJgSA==
 ::ZR4luwNxJguZRRnk
 ::Yhs/ulQjdF+5
-::cxAkpRVqdFKZSDk=
+::cxAkpRVqdFKZSTk=
 ::cBs/ulQjdF+5
 ::ZR41oxFsdFKZSDk=
 ::eBoioBt6dFKZSDk=
@@ -36,37 +36,14 @@ setlocal
 
 REM Resolve script directory
 set SCRIPT_DIR=%~dp0
-set JAR=%SCRIPT_DIR%\bin\backupcat4j.jar
-set FFMPEG=%SCRIPT_DIR%\bin\ffmpeg.exe
-set FFPROBE=%SCRIPT_DIR%\bin\ffprobe.exe
+set JAVA=%SCRIPT_DIR%\bin\jre\bin\java.exe
+set JAR=%SCRIPT_DIR%\bin\backupcat4j-fx.jar
 
-REM Prompt user for SOURCE folder
-set /p SOURCE=Enter source folder (default: D:\projects\temp\source):
-if "%SOURCE%"=="" set SOURCE=D:\projects\temp\source
+REM Run the Java FX jar
+"%JAVA%" ^
+--enable-native-access=ALL-UNNAMED ^
+--add-modules javafx.controls,javafx.fxml ^
+-cp "%JAR%" ^
+org.kapps.AppUI
 
-REM Prompt user for TARGET folder
-set /p TARGET=Enter target folder (default: D:\projects\temp\destination):
-if "%TARGET%"=="" set TARGET=D:\projects\temp\destination
-
-REM Prompt user for organize mode with default FULL
-set /p ORGANIZE=Enter organize mode [FULL, IGNORING_FIRST_FOLDER, NONE] (default: FULL):
-if "%ORGANIZE%"=="" set ORGANIZE=FULL
-
-REM Prompt user for bitrate with default 3000000
-set /p BITRATE=Enter maximum bitrate for videos (default: 3000000):
-if "%BITRATE%"=="" set BITRATE=3000000
-
-REM Run the backup JAR with user inputs
-java -jar "%JAR%" ^
-source="%SOURCE%" ^
-target="%TARGET%" ^
-ffmpeg="%FFMPEG%" ^
-ffprobe="%FFPROBE%" ^
-organize=%ORGANIZE% ^
---compress ^
---resume ^
---replace ^
---bitrate=%BITRATE%
-
-pause
 endlocal
